# verbump

./: CHANGELOG.md  pyproject.toml  temp.sh
.github/workflows/: bump_version.py  bump_version.yml  commit_file_mapper.py
operators/modulator/: CHANGELOG.md  __init__.py  modulator.py  pyproject.toml
operators/power/: CHANGELOG.md  README.md  power.py  pyproject.toml
operators/power/src/power/: __init__.py
src/verbump/: verbump.py
verbump/: CHANGELOG.md  __init__.py  pyproject.toml  verbump.py
