[project]
dynamic = ["version"]
name = "verbump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "priyash7", email = "priyashshah4@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["operators/modulator", "operators/power"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.hatch.build.targets.wheel]
packages = ["verbump"]
