[project]
name = "verbump"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "priyash7", email = "priyashshah4@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verbump"]

[tool.uv.workspace]
members = ["operators/modulator", "operators/power"]

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
