[project]
name = "verbump"
version = "0.3.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "priyash7", email = "priyashshah4@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verbump"]

[tool.uv.workspace]
members = ["operators/modulator", "operators/power"]


[tool.semantic_release.branches.main]
match = "main"
prerelease = false


# moving towards major version update second try! Minor changes now!