[project]
name = "modulator"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
[[project.authors]]
name = "priyash7"
email = "priyashshah4@gmail.com"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
commit_subject = "chore: release {version}"
build_command = "pip install build && python -m build"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
