[project]
name = "modulator"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
[[project.authors]]
name = "priyash7"
email = "priyashshah4@gmail.com"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "modulator-{version}"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
