[project]
name = "power"
version = "1.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
[[project.authors]]
name = "priyash7"
email = "priyashshah4@gmail.com"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "power-{version}"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"
